# NAMLib

./: .gitignore  CMakeLists.txt  README.md
include/: GPUCreate.h  NeuralAmpModelerInterface.h
namlib/: CMakeLists.txt
namlib/include/NAM/: dsp.h  get_dsp.h  lstm.h  tensor_data.h  wavenet.h
namlib/src/: GPUCreate.cpp  GPUNeuralAmpModeler.cpp  GPUNeuralAmpModeler.h
namlib/src/NAM/: README.md  dsp.cpp  get_dsp.cpp  lstm.cpp  wavenet.cpp
namlib/tests/: GPUNeuralAmpModelerTests.cpp  nam_process_file.cpp
